--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -46,11 +46,13 @@
   {% if messages %}
     {% for message in messages %}
 
-    <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      {{ message }}
+    <div class="container">
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        {{ message }}
+      </div>
     </div>
 
     {% endfor %}
@@ -74,7 +76,6 @@
   <script type="text/javascript" src="{% static 'polyledger/js/popper.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/tablesorter.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'polyledger/js/toolkit.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/application.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/chart.min.js' %}"></script>
   <script type="text/javascript" src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
