--- a/polyledger/account/templates/account/index.html
+++ b/polyledger/account/templates/account/index.html
@@ -21,7 +21,15 @@
         <div class="card-body">
           <h4 class="card-title">Fund your account</h4>
           <p class="card-text">To get started with Polyledger's automated cryptocurrency investing, fund your account with either USD or BTC. We require a $10,000 (or equivalent) minumum investment.</p>
-          <a href="#" class="btn btn-primary btn-lg btn-block">Fund Account</a>
+          <div class="btn-group btn-block">
+            <button class="btn btn-primary btn-lg btn-block dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Fund Account
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">USD</a>
+              <a class="dropdown-item" href="#">BTC</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
