--- a/polyledger/account/templates/account/index.html
+++ b/polyledger/account/templates/account/index.html
@@ -21,15 +21,7 @@
         <div class="card-body">
           <h4 class="card-title">Fund your account</h4>
           <p class="card-text">To get started with Polyledger's automated cryptocurrency investing, fund your account with either USD or BTC. We require a $10,000 (or equivalent) minumum investment.</p>
-          <div class="btn-group btn-block">
-            <button class="btn btn-primary btn-lg btn-block dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Fund Account
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">USD</a>
-              <a class="dropdown-item" href="#">BTC</a>
-            </div>
-          </div>
+          <button data-toggle="modal" data-target="#fund-account-modal" class="btn btn-primary btn-lg btn-block">Fund Account</button>
         </div>
       </div>
     </div>
@@ -94,6 +86,57 @@
   </div>
   {% endif %}
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="fund-account-modal" tabindex="-1" role="dialog" aria-labelledby="fund-account-modal-label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="fund-account-modal-label">Fund your account</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <nav class="nav nav-tabs" id="myTab" role="tablist">
+          <a class="nav-item nav-link active" href="#USD" data-toggle="tab" role="tab">USD</a>
+          <a class="nav-item nav-link" href="#BTC" data-toggle="tab" role="tab">BTC</a>
+        </nav>
+
+        <div class="tab-content my-5">
+          <div class="tab-pane fade show active" id="USD" role="tabpanel">
+            <p>If you would like to buy cryptocurrency with USD, get started by clicking the button below. You'll simply have to log into your bank, then we'll handle the rest.</p>
+            <div class="text-center">
+              <button class="btn btn-success" id="link-btn">Link bank account</button>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="BTC" role="tabpanel">
+            <div class="form-group">
+              <label for="btc-address">Your Bitcoin address:</label>
+              <input name="btc-address" class="form-control">
+            </div>
+            <div class="form-group">
+              <label>Send your funds to this address:</label>
+              <div class="input-group">
+                <input type="text" class="form-control" value="1F1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xqX" readonly>
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button"><i class="icon icon-copy"></i></button>
+                </span>
+              </div>
+            </div>
+            <hr>
+            <p>We'll send you an email notification as soon as your Bitcoin is received.</p>
+          </div>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
