disable link button when amount is less than zero

--- a/polyledger/account/templates/base.html
+++ b/polyledger/account/templates/base.html
@@ -80,5 +80,6 @@
   <script type="text/javascript" src="{% static 'polyledger/js/chart.min.js' %}"></script>
   <script type="text/javascript" src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
   <script type="text/javascript" src="{% static 'account/js/plaid.js' %}"></script>
+  <script type="text/javascript" src="{% static 'account/js/account.js' %}"></script>
 </body>
 </html>
