add risk score verification page

--- a/account/templates/account/questions.html
+++ b/account/templates/account/questions.html
@@ -5,8 +5,7 @@
 <ol class="breadcrumb">
   <div class="container">
     <li class="breadcrumb-item">Asess Your Risk Tolerance</li>
-    <li class="breadcrumb-item text-muted">View Recommendations</li>
-    <li class="breadcrumb-item text-muted">Open Account</li>
+    <li class="breadcrumb-item text-muted">Verify Risk Assessment</li>
   </div>
 </ol>
 
@@ -27,13 +26,13 @@
           <p><strong>Are you an accredited investor?</strong><br><small class="form-text text-muted">Click <a href="#">here</a> to learn if you are an accredited investor.</small></p>
           <div class="form-check">
             <label class="form-check-label">
-              <input type="radio" class="form-check-input" name="accredited_investor" id="accredited_investor1" value="True">
+              <input type="radio" class="form-check-input" name="accredited_investor" id="accredited_investor1" value="1">
               Yes
             </label>
           </div>
           <div class="form-check">
             <label class="form-check-label">
-              <input type="radio" class="form-check-input" name="accredited_investor" id="accredited_investor2" value="False">
+              <input type="radio" class="form-check-input" name="accredited_investor" id="accredited_investor2" value="0">
               No
             </label>
           </div>
