--- a/account/static/account/css/account.css
+++ b/account/static/account/css/account.css
@@ -6,6 +6,43 @@ input.short-field {
   width: 250px !important;
 }
 
+#risk-index-container {
+  width: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 0.5rem;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #909bc5;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.slider::-moz-range-thumb {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #909bc5;
+  cursor: pointer;
+}
+
 .footer {
   bottom: 0;
   width: 100%;
