format input values as numerals

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -118,11 +118,11 @@
                   <label for="amount">Transfer Amount</label>
                   <div class="input-group">
                     <span class="input-group-addon">$</span>
-                    <input type="text" name="amount" class="form-control" placeholder="10,000" aria-label="Amount (to the nearest dollar)">
+                    <input type="text" name="amount" class="form-control usd-input" placeholder="10,000" aria-label="Amount (to the nearest dollar)">
                     <span class="input-group-addon">.00</span>
                   </div>
                 </div>
-                <button class="btn btn-primary btn-block" id="link-btn">Start transfer</button>
+                <button class="btn btn-primary btn-block" id="link-btn">Continue</button>
               </div>
             </div>
           </div>
