--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -79,6 +79,7 @@
   <script type="text/javascript" src="{% static 'polyledger/js/application.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyledger/js/chart.min.js' %}"></script>
   <script type="text/javascript" src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
+  <script type="text/javascript" src="{% static 'account/js/cleave.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'account/js/plaid.js' %}"></script>
   <script type="text/javascript" src="{% static 'account/js/account.js' %}"></script>
 </body>
