--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -21,7 +21,7 @@
         <div class="card-body">
           <h4 class="card-title">Fund your account</h4>
           <p class="card-text">To get started with Polyledger's automated cryptocurrency investing, fund your account with either USD or BTC. We require a $10,000 (or equivalent) minumum investment.</p>
-          <button data-toggle="modal" data-target="#fund-account-modal" class="btn btn-dark btn-lg btn-block">Fund Account</button>
+          <a href="/account/deposit/" class="btn btn-dark btn-lg btn-block">Fund Account</a>
         </div>
       </div>
     </div>
@@ -41,80 +41,6 @@
       </div>
     </div>
     {% endif %}
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="fund-account-modal" tabindex="-1" role="dialog" aria-labelledby="fund-account-modal-label" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="fund-account-modal-label">Fund your account</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-
-        <nav class="nav nav-tabs" id="myTab" role="tablist">
-          <a class="nav-item nav-link active" href="#USD" data-toggle="tab" role="tab">USD</a>
-          <a class="nav-item nav-link" href="#BTC" data-toggle="tab" role="tab">BTC</a>
-        </nav>
-
-        <div class="alert alert-danger fade hide mt-3" role="alert">
-          <span id="error-message"></span>
-        </div>
-
-        <div class="tab-content my-3">
-          <div class="tab-pane fade show active" id="USD" role="tabpanel">
-            <div class="row">
-              <div class="col">
-                <p>If you would like to buy cryptocurrency with USD, get started by entering your investment and clicking the button below. You'll simply have to log into your bank, then we'll handle the rest.</p>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="amount">Transfer Amount</label>
-                  <div class="input-group">
-                    <span class="input-group-addon">$</span>
-                    <input type="text" name="amount" class="form-control usd-input" placeholder="10,000" aria-label="Amount (to the nearest dollar)">
-                    <span class="input-group-addon">.00</span>
-                  </div>
-                </div>
-                <button class="btn btn-dark btn-block" id="link-btn">Continue</button>
-              </div>
-            </div>
-            <div class="row mt-5">
-              <div class="col">
-                <p><strong>Note:</strong> it may take up to 7 business days for ACH payments to process.</p>
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane fade" id="BTC" role="tabpanel">
-            <div class="form-group">
-              <label for="btc-address">Your Bitcoin address:</label>
-              <input name="btc-address" class="form-control">
-            </div>
-            <div class="form-group">
-              <label>Send your funds to this address:</label>
-              <div class="input-group">
-                <input type="text" class="form-control" value="1F1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xqX" readonly>
-                <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button"><i class="icon icon-copy"></i></button>
-                </span>
-              </div>
-            </div>
-            <hr>
-            <p>We'll send you an email notification as soon as your Bitcoin is received.</p>
-          </div>
-        </div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
   </div>
 </div>
 
