--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -25,10 +25,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item {% if request.path == '/account/' %}active{% endif %}">
-            <a class="nav-link" href="/account">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/account">Home</a>
           </li>
         </ul>
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://polyledger.zendesk.com">Support</a>
+          </li>
           <li class="nav-item {% if request.path == '/account/settings/' %}active{% endif %}">
             <a class="nav-link" href="/account/settings">Settings</a>
           </li>
