--- a/polyledger/static/polyledger/css/polyledger.css
+++ b/polyledger/static/polyledger/css/polyledger.css
@@ -1,12 +1,12 @@
 html, body {
   height: 100%;
+  background-color: #F6F6F6 !important;
 }
 
 main {
   min-height: 70vh;
   background-color: #F6F6F6;
   padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
 }
 
 .btn.btn-dark {
