[updates] deposit funds into GDAX sandbox env

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{% static 'account/css/account.css' %}" />
   <link rel="stylesheet" href="{% static 'polyledger/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="{% static 'polyledger/css/toolkit-light.min.css' %}" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <title>Polyledger</title>
 </head>
