--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -21,7 +21,11 @@
         <div class="card-body">
           <h4 class="card-title">Fund your account</h4>
           <p class="card-text">To get started with Polyledger's automated cryptocurrency investing, fund your account with either USD or BTC. We require a $10,000 (or equivalent) minumum investment.</p>
+          {% if user.profile.account_funded %}
+          <a role="button" class="btn btn-link btn-lg btn-block" disabled><span class="text-success">Complete <i class="icon icon-check"></i></span></a>
+          {% else %}
           <a href="/account/deposit/" class="btn btn-dark btn-lg btn-block">Fund Account</a>
+          {% endif %}
         </div>
       </div>
     </div>
