--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -13,7 +13,7 @@
           <form action="#" method="POST">
             <div class="form-group">
               <label for="currentEmail">Current email address</label>
-              <input class="form-control short-field" type="email" placeholder="example@test.com" readonly>
+              <input class="form-control short-field" type="email" placeholder="{{email}}" readonly>
             </div>
             <div class="form-group">
               <label for="newEmail">New email address</label>
