--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -31,6 +31,9 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" href="/account/deposit/">Deposit</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://polyledger.zendesk.com">Support</a>
           </li>
           <li class="nav-item {% if request.path == '/account/settings/' %}active{% endif %}">
