--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -86,5 +86,6 @@
   <script type="text/javascript" src="{% static 'account/js/cleave.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'account/js/plaid.js' %}"></script>
   <script type="text/javascript" src="{% static 'account/js/account.js' %}"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 </body>
 </html>
