--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -14,6 +14,9 @@
     {% if user.profile.account_funded and user.profile.risk_assessment_complete %}
     <div class="col">
       <h2 class="statcard-number text-center">{{ account_value }} <small class="badge" id="percent-change"></small></h2>
+      <div class="text-center my-5" style="height: 200px; display: flex; justify-content: center; align-items: center;" id="spinner">
+        <i class="fa fa-spinner fa-spin fa-3x"></i>
+      </div>
       <canvas id="portfolio-value-chart" class="my-5" width="100%" height="25"></canvas>
       <h4>Transfer History</h4>
       <ul class="list-group">
