--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -37,7 +37,7 @@
       <div class="text-center my-5" style="height: 270px; display: flex; justify-content: center; align-items: center;" id="spinner">
         <i class="fa fa-spinner fa-spin fa-3x"></i>
       </div>
-      <canvas id="portfolio-value-chart" class="my-5" width="100%" height="25"></canvas>
+      <canvas id="portfolio-value-chart" class="my-5" width="100%" height="25" style="display: none;"></canvas>
       <h4>Transfer History</h4>
       <ul class="list-group">
         {% for transfer in transfers %}
