--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -30,17 +30,20 @@
           </li>
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/account/deposit/">Deposit</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://polyledger.zendesk.com">Support</a>
-          </li>
-          <li class="nav-item {% if request.path == '/account/settings/' %}active{% endif %}">
-            <a class="nav-link" href="/account/settings">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/account/logout"><i class="icon icon-log-out"></i> Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+              <h6 class="dropdown-header">Transfer</h6>
+              <a class="dropdown-item" href="/account/deposit/">Deposit</a>
+              <a class="dropdown-item" href="#">Withdraw</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="https://polyledger.zendesk.com">Support</a>
+              <a class="dropdown-item" href="/account/settings/">Settings</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/account/logout/"><i class="icon icon-log-out"></i> Logout</a>
+            </div>
           </li>
         </ul>
       </div>
