--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,39 +15,41 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-      <img src="{% static 'polyledger/img/logo.png' %}" height="40" alt="Polyledger">
-    </a>
-    {% if user.is_authenticated %}
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="{% static 'polyledger/img/logo.png' %}" height="40" alt="Polyledger">
+      </a>
+      {% if user.is_authenticated %}
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if request.path == '/account/' %}active{% endif %}">
-            <a class="nav-link" href="/account">Home</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Account
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <h6 class="dropdown-header">Transfer</h6>
-              <a class="dropdown-item" href="/account/deposit/">Deposit</a>
-              <a class="dropdown-item" href="#">Withdraw</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="https://polyledger.zendesk.com">Support</a>
-              <a class="dropdown-item" href="/account/settings/">Settings</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/account/logout/"><i class="icon icon-log-out"></i> Logout</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    {% endif %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% if request.path == '/account/' %}active{% endif %}">
+              <a class="nav-link" href="/account">Home</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <h6 class="dropdown-header">Transfer</h6>
+                <a class="dropdown-item" href="/account/deposit/">Deposit</a>
+                <a class="dropdown-item" href="#">Withdraw</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="https://polyledger.zendesk.com">Support</a>
+                <a class="dropdown-item" href="/account/settings/">Settings</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/account/logout/"><i class="icon icon-log-out"></i> Logout</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      {% endif %}
+    </div>
   </nav>
 
   {% if messages %}
