allow users to choose coins for their portfolio

--- a/account/static/account/css/account.css
+++ b/account/static/account/css/account.css
@@ -83,6 +83,37 @@ input.short-field {
   cursor: pointer;
 }
 
+/**
+ * Coins page
+ * Bootstrap card-columns override:
+ * https://getbootstrap.com/docs/4.0/components/card/#card-columns
+ **/
+
+
+@media (min-width: 576px) {
+  .card-columns {
+    column-count: 2 !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .card-columns {
+    column-count: 3 !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .card-columns {
+    column-count: 4 !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .card-columns {
+    column-count: 5 !important;
+  }
+}
+
 /* Base Template */
 
 .footer {
