--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -56,21 +56,6 @@
     {% else %}
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="{% static 'account/img/piggybank_icon.png' %}" alt="Piggybank icon">
-        <div class="card-body">
-          <h4 class="card-title">Fund your account</h4>
-          <p class="card-text">To get started with Polyledger's automated cryptocurrency investing, fund your account with either USD or BTC. We require a $10,000 (or equivalent) minumum investment.</p>
-          {% if user.profile.account_funded %}
-          <a role="button" class="btn btn-link btn-lg btn-block" disabled><span class="text-success">Complete <i class="icon icon-check"></i></span></a>
-          {% else %}
-          <a href="/account/deposit/" class="btn btn-dark btn-lg btn-block">Fund Account</a>
-          {% endif %}
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card">
         <img class="card-img-top" src="{% static 'account/img/dice_icon.png' %}" alt="Dice icon">
         <div class="card-body">
           <h4 class="card-title">Complete Risk Assessment</h4>
@@ -78,7 +63,37 @@
           {% if user.profile.risk_assessment_complete %}
           <a role="button" class="btn btn-link btn-lg btn-block" disabled><span class="text-success">Complete <i class="icon icon-check"></i></span></a>
           {% else %}
-          <a href="/account/questions/" class="btn btn-dark btn-lg btn-block">Start</a>
+          <a href="/account/questions/" class="btn btn-dark btn-lg btn-block">Start Assessment</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="{% static 'account/img/coins_icon.png' %}" alt="Coins icon">
+        <div class="card-body">
+          <h4 class="card-title">Choose Coins</h4>
+          <p class="card-text">Choose which coins you would like in your portfolio. Having more coins in your portfolio increases management overhead but reduces portfolio risk significantly.</p>
+          {% if user.profile.risk_assessment_complete %}
+          <a role="button" class="btn btn-link btn-lg btn-block" disabled><span class="text-success">Complete <i class="icon icon-check"></i></span></a>
+          {% else %}
+          <a href="/account/coins/" class="btn btn-dark btn-lg btn-block">Choose Coins</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="{% static 'account/img/piggybank_icon.png' %}" alt="Piggybank icon">
+        <div class="card-body">
+          <h4 class="card-title">Fund Account (Premium)</h4>
+          <p class="card-text">To get started with Polyledger's automated cryptocurrency investing, fund your account with BTC or ETH. This option is only available to users with premium accounts.</p>
+          {% if user.profile.account_funded %}
+          <a role="button" class="btn btn-link btn-lg btn-block" disabled><span class="text-success">Complete <i class="icon icon-check"></i></span></a>
+          {% else %}
+          <button class="btn btn-dark btn-lg btn-block" disabled>Fund Account</button>
           {% endif %}
         </div>
       </div>
