--- a/account/templates/account/coins.html
+++ b/account/templates/account/coins.html
@@ -8,62 +8,74 @@
   <p class="lead mb-5">Select the coins you want to add to your portfolio (you must have at least two coins selected). You can always update this later.</p>
   <div class="row">
     <div class="col-md-12">
-      <div class="card-columns">
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Bitcoin">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/bitcoin.png' %}" alt="Bitcoin" width="100">
+      <form method=post action="/account/coins/">
+        {% csrf_token %}
+        <div class="card-columns">
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Bitcoin">
+            <input type="hidden" name="bitcoin" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/bitcoin.png' %}" alt="Bitcoin" width="100">
+            </div>
+          </div>
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Bitcoin Cash">
+            <input type="hidden" name="bitcoin_cash" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/bitcoin_cash.png' %}" alt="Bitcoin Cash" width="100">
+            </div>
+          </div>
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Dash">
+            <input type="hidden" name="dash" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/dash.png' %}" alt="Dash" width="100">
+            </div>
+          </div>
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ethereum">
+            <input type="hidden" name="ethereum" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/ethereum.png' %}" alt="Ethereum" width="100">
+            </div>
+          </div>
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ethereum Classic">
+            <input type="hidden" name="ethereum_classic" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/ethereum_classic.png' %}" alt="Ethereum Classic" width="100">
+            </div>
+          </div>
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Litecoin">
+            <input type="hidden" name="litecoin" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/litecoin.png' %}" alt="Litecoin" width="100">
+            </div>
+          </div>
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Monero">
+            <input type="hidden" name="monero" value="false">
+            <div class="card-body text-center">
+              <img src="{% static 'account/img/coins/monero.png' %}" alt="Monero" width="100">
+            </div>
+          </div>
+          <div class="card coin-card">
+            <input type="hidden" name="neo" value="false">
+            <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="NEO">
+              <img src="{% static 'account/img/coins/neo.png' %}" alt="NEO" width="100">
+            </div>
+          </div>
+          <div class="card coin-card">
+            <input type="hidden" name="ripple" value="false">
+            <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="Ripple">
+              <img src="{% static 'account/img/coins/ripple.png' %}" alt="Ripple" width="100">
+            </div>
+          </div>
+          <div class="card coin-card">
+            <input type="hidden" name="zcash" value="false">
+            <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="Zcash">
+              <img src="{% static 'account/img/coins/zcash.png' %}" alt="Zcash" width="100">
+            </div>
           </div>
         </div>
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Bitcoin Cash">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/bitcoin_cash.png' %}" alt="Bitcoin Cash" width="100">
-          </div>
-        </div>
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Dash">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/dash.png' %}" alt="Dash" width="100">
-          </div>
-        </div>
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ethereum">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/ethereum.png' %}" alt="Ethereum" width="100">
-          </div>
-        </div>
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ethereum Classic">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/ethereum_classic.png' %}" alt="Ethereum Classic" width="100">
-          </div>
-        </div>
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Litecoin">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/litecoin.png' %}" alt="Litecoin" width="100">
-          </div>
-        </div>
-        <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Monero">
-          <div class="card-body text-center">
-            <img src="{% static 'account/img/coins/monero.png' %}" alt="Monero" width="100">
-          </div>
-        </div>
-        <div class="card coin-card">
-          <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="NEO">
-            <img src="{% static 'account/img/coins/neo.png' %}" alt="NEO" width="100">
-          </div>
-        </div>
-        <div class="card coin-card">
-          <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="Ripple">
-            <img src="{% static 'account/img/coins/ripple.png' %}" alt="Ripple" width="100">
-          </div>
-        </div>
-        <div class="card coin-card">
-          <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="Zcash">
-            <img src="{% static 'account/img/coins/zcash.png' %}" alt="Zcash" width="100">
-          </div>
-        </div>
-      </div>
+        <button type="submit" class="btn btn-dark btn-lg mt-5 float-right" id="confirm-coins">Confirm</button>
+      </form>
     </div>
   </div>
-
-  <a href="/account/" class="btn btn-dark btn-lg mt-5 float-right">Confirm</a>
 </div>
 
 {% endblock %}
