--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -9,17 +9,28 @@
     <div class="row py-5">
       <div class="col">
         <h2 class="text-center">Your Portfolio</h2>
-        <div class="d-flex flex-row justify-content-center">
-          {% for coin in selected_coins %}
-            <div class="card mx-1">
-              <div class="card-body">
-                {% with 'account/img/coins/'|add:coin.name|add:'.png' as image_url %}
-                  <img src="{% static image_url %}" width="25">
-                {% endwith %}
-              </div>
-            </div>
-          {% endfor %}
-        </div>
+        <table class="table table-hover table-bordered">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Coin</th>
+              <th scope="col">Percentage</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for coin in selected_coins %}
+              <tr>
+                <th scope="row">
+                  {% with 'account/img/coins/'|add:coin.name|add:'.png' as image_url %}
+                    <img src="{% static image_url %}" width="25">
+                  {% endwith %}
+                </th>
+                <td>{{coin.name}}</td>
+                <td>{{coin.percent}}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
     </div>
     <div class="row py-5">
