add percent change badge

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -36,6 +36,7 @@
     <div class="row py-5">
       <div class="col-md-12">
         <h3 class="text-center">Historical Performance</h3>
+        <h2 class="statcard-number text-center"><small class="badge" id="percent-change"></small></h2>
         <ul class="nav nav-pills justify-content-center my-4">
           <li class="nav-item">
             <a class="nav-link active" href="#">7D</a>
