--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -20,7 +20,7 @@
           <tbody>
             {% for coin in selected_coins %}
               <tr>
-                <th scope="row">
+                <th scope="row" class="text-center">
                   {% with 'account/img/coins/'|add:coin.name|add:'.png' as image_url %}
                     <img src="{% static image_url %}" width="25">
                   {% endwith %}
@@ -33,7 +33,7 @@
         </table>
       </div>
     </div>
-    <div class="row py-5">
+    <div class="row py-2">
       <div class="col-md-12">
         <h3 class="text-center">Historical Performance</h3>
         <h2 class="statcard-number text-center"><small class="badge" id="percent-change"></small></h2>
