--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -36,9 +36,9 @@
                 Account
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <h6 class="dropdown-header">Transfer</h6>
-                <a class="dropdown-item" href="/account/deposit/">Deposit</a>
-                <a class="dropdown-item" href="#">Withdraw</a>
+                <h6 class="dropdown-header">Preferences</h6>
+                <a class="dropdown-item" href="/account/coins/">Coin Selection</a>
+                <a class="dropdown-item" href="/account/questions/">Risk Assessment</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://polyledger.zendesk.com">Support</a>
                 <a class="dropdown-item" href="/account/settings/">Settings</a>
