move tooltip data attrs to correct element

--- a/account/templates/account/coins.html
+++ b/account/templates/account/coins.html
@@ -53,21 +53,21 @@
               <img src="{% static 'account/img/coins/monero.png' %}" alt="Monero" width="100">
             </div>
           </div>
-          <div class="card coin-card">
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="NEO">
             <input type="hidden" name="neo" value="false">
-            <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="NEO">
+            <div class="card-body text-center">
               <img src="{% static 'account/img/coins/neo.png' %}" alt="NEO" width="100">
             </div>
           </div>
-          <div class="card coin-card">
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ripple">
             <input type="hidden" name="ripple" value="false">
-            <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="Ripple">
+            <div class="card-body text-center">
               <img src="{% static 'account/img/coins/ripple.png' %}" alt="Ripple" width="100">
             </div>
           </div>
-          <div class="card coin-card">
+          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Zcash">
             <input type="hidden" name="zcash" value="false">
-            <div class="card-body text-center" data-toggle="tooltip" data-placement="bottom" title="Zcash">
+            <div class="card-body text-center">
               <img src="{% static 'account/img/coins/zcash.png' %}" alt="Zcash" width="100">
             </div>
           </div>
