fix chart on small viewports

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -57,7 +57,9 @@
         <div class="text-center my-5" style="height: 270px; display: flex; justify-content: center; align-items: center;" id="spinner">
           <i class="fa fa-spinner fa-spin fa-3x"></i>
         </div>
-        <canvas id="portfolio-value-chart" class="my-5" width="100%" height="25" style="display: none;"></canvas>
+        <div style="position: relative; max-height: 270px;">
+          <canvas id="portfolio-value-chart" class="my-5" height="270" style="display: none;"></canvas>
+        <div>
       </div>
     </div>
   {% else %}
