display human-readable coin names; display percents with two decimal points; update lattice

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -21,7 +21,7 @@
             {% for coin in selected_coins %}
               <tr>
                 <th scope="row" class="text-center">
-                  {% with 'account/img/coins/'|add:coin.name|add:'.png' as image_url %}
+                  {% with 'account/img/coins/'|add:coin.filename as image_url %}
                     <img src="{% static image_url %}" width="25">
                   {% endwith %}
                 </th>
