--- a/account/templates/account/questions.html
+++ b/account/templates/account/questions.html
@@ -193,7 +193,7 @@
           {% endif %}
         </fieldset>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-dark">Submit</button>
 
       </form>
     </div>
