--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -54,6 +54,7 @@
             <a class="nav-link" href="#">1Y</a>
           </li>
         </ul>
+        <div id="error"></div>
         <div class="text-center my-5" style="height: 270px; display: flex; justify-content: center; align-items: center;" id="spinner">
           <i class="fa fa-spinner fa-spin fa-3x"></i>
         </div>
