cosmetic ui updates

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -17,7 +17,7 @@
 
         <div class="form-group">
           <label id="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
-          <input class="form-control" type="email" name="{{ form.username.html_name }}">
+          <input class="form-control" type="email" name="{{ form.username.html_name }}" autofocus>
           {% if form.email.errors %}
             <div class="text-danger">
               {% for error in form.email.errors %}
