--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item" href="/account/coins/">Coin Selection</a>
                 <a class="dropdown-item" href="/account/questions/">Risk Assessment</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="https://polyledger.zendesk.com">Support</a>
+                <a class="dropdown-item" href="https://polyledger.zendesk.com" target="blank">Support</a>
                 <a class="dropdown-item" href="/account/settings/">Settings</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/account/logout/"><i class="icon icon-log-out"></i> Logout</a>
