--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -73,9 +73,9 @@
 
   <footer class="footer">
     <div class="container">
-      <p>Polyledger is <em>not</em> an SEC-registered investment advisor. Please see our Full Disclosure for important details.</p>
-      <p>By using this website, you understand the information being presented is provided for informational purposes only and agree to our Terms of Use and Privacy Policy. Polyledger relies on information from various sources believed to be reliable, including clients and third parties, but cannot guarantee the accuracy and completeness of that information. Nothing in this communication should be construed as an offer, recommendation, or solicitation to buy or sell any security. Additionally, Polyledger does not provide tax advice and investors are encouraged to consult with their personal tax advisors.</p>
-      <p>Polyledger’s financial advisory services, provided to investors who become clients pursuant to a written agreement, are designed to aid our clients in preparing for their financial futures and allow them to personalize their assumptions for their portfolios.</p>
+      <h5>Disclaimer</h5>
+      <p>Polyledger is not a registered investment advisor. Our investment advice is 100% free.</p>
+      <p>By using this website, you understand the information being presented is provided for informational purposes only. Polyledger relies on information from various sources believed to be reliable, including clients and third parties, but cannot guarantee the accuracy and completeness of that information.</p>
       <p>Investing in cryptocurrencies involves huge risk, including the possible loss of money you invest, and past performance does not guarantee future performance. Historical returns, expected returns, and probability projections are provided for informational and illustrative purposes, and may not reflect actual future performance.</p>
       <p>© Copyright 2017 Polyledger</p>
     </div>
